# cookiecutter-python

./: ReadMe.md  cookiecutter.json
{{ cookiecutter.project_name }}/: README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_name }}/docs/: index.md  usage.md
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  cli.py
{{ cookiecutter.project_name }}/tests/: __init__.py  test_main.py
